--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "pinia": "^2.0.33",
         "vite": "^4.0.0",
         "vue-router": "^4.1.6"
     }
