--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "pinia": "^2.0.33",
+        "sass": "^1.61.0",
         "vite": "^4.0.0",
         "vue-router": "^4.1.6"
     }
