--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "pinia": "^2.0.33",
         "sass": "^1.61.0",
         "vite": "^4.0.0",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "vuetify": "^3.1.14"
     }
 }
