--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@mdi/font": "^7.2.96",
         "@vitejs/plugin-vue": "^4.0.0",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
