--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "devDependencies": {
         "@mdi/font": "^7.2.96",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vuelidate/core": "^2.0.3",
+        "@vuelidate/validators": "^2.0.4",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "pinia": "^2.0.33",
