[update] ci.yml mdファイル以外の変更が含まれていたら、起動する。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: greenpark's CI
 run-name: ${{ github.actor }} is CI work
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - "*.md"
 
 jobs:
   check-bats-version:
