[update] ci.yml mkdir -p database に変更した。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,5 @@ jobs:
 
       - name: Create Database
         run: |
-          mkdir database
+          mkdir -p database
           touch database/database.sqlite
