--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,8 @@ on:
   push:
     paths-ignore:
       - "*.md"
-
+    branches-ignore:
+      - main
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
