[add] cd.yml デプロイ準備中です。

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,3 +10,7 @@ jobs:
   app-deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+
+  steps:
+    - name: Preparing for deployment!
+      run: echo "Preparing for deployment!"
