[fix] cd.yml デプロイ準備中を表示する。

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
-  steps:
-    - name: Preparing for deployment!
-      run: echo "Preparing for deployment!"
+    steps:
+      - name: Preparing for deployment
+        run: echo "Preparing for deployment"
